refactor(main menu): remove DOM-based UI, use pure Phaser Game Objects for all UI elements
- Replaced all DOM element UI with Phaser Game Objects in MainMenuScene
- Removed DOM container and background overrides to allow body gradient to show through
- Ensured all buttons and UI use setInteractive() and proper Phaser event patterns
- Fixed timing issue with this.time.addEvent() by using manual timer in update()
- Updated documentation to reflect DOM removal and Phaser compliance
- Improved performance, maintainability, and adherence to Phaser best practices

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
+    "dev:clean": "node scripts/dev-clean.js",
     "build": "vite build",
+    "build:clean": "npm run clean && vite build",
+    "clean": "node scripts/clean-cache.js",
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
