Add native Phaser audio system, animation, and layout integration; implement Playwright-based test runner and MCP reporter; update docs and patterns for 3.70.0 best practices

--- a/package.json
+++ b/package.json
@@ -10,14 +10,30 @@
     "build:clean": "npm run clean && vite build",
     "clean": "node scripts/clean-cache.js",
     "preview": "vite preview",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:cleanup": "vitest tests/cleanup.test.js",
-    "test:coverage": "vitest --coverage",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
+    "test:headed": "playwright test --headed",
+    "test:debug": "playwright test --debug",
+    "test:smoke": "playwright test tests/phaser/scene-transitions.test.js tests/phaser/button-functionality.test.js",
+    "test:regression": "playwright test tests/phaser/scene-loading.test.js tests/phaser/data-flow.test.js",
+    "test:performance": "playwright test tests/phaser/performance.test.js",
+    "test:accessibility": "playwright test tests/phaser/accessibility.test.js",
+    "test:error-handling": "playwright test tests/phaser/error-handling.test.js",
+    "test:phaser": "playwright test tests/phaser/",
+    "test:phaser:smoke": "playwright test tests/phaser/scene-transitions.test.js tests/phaser/button-functionality.test.js --reporter=html",
+    "test:phaser:full": "playwright test tests/phaser/ --reporter=html",
+    "test:phaser:ci": "playwright test tests/phaser/ --reporter=github",
+    "test:coverage": "playwright test --reporter=html --output-dir=test-results/coverage",
+    "test:report": "playwright show-report test-results/",
+    "test:clean": "rm -rf test-results/ && rm -rf playwright-report/",
+    "test:install": "playwright install",
+    "test:install-deps": "playwright install-deps",
+    "test:all": "npm run test:phaser:full",
+    "test:ci": "npm run test:phaser:ci",
     "test:unit": "vitest run",
-    "test:e2e": "playwright test",
-    "test:webgl": "node webgl-test-runner.js",
-    "test:all": "npm run test:unit && npm run test:e2e && npm run test:webgl"
+    "test:unit:ui": "vitest --ui",
+    "test:unit:coverage": "vitest --coverage",
+    "test:webgl": "node webgl-test-runner.js"
   },
   "keywords": [
     "goals",
